--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/photo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="0vH9XFF3IUFqXCr8TZxN7LWU4qBJJa9Vu_N0aFpy-AM" />
     <title>Arun Ravikumar</title>
   </head>
   <body>
