added ogtest from offi.  doc

--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/photo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="google-site-verification" content="0vH9XFF3IUFqXCr8TZxN7LWU4qBJJa9Vu_N0aFpy-AM" />
+    <meta
+      name="google-site-verification"
+      content="0vH9XFF3IUFqXCr8TZxN7LWU4qBJJa9Vu_N0aFpy-AM"
+    />
+    <!-- og tags media  share -->
+    <meta property="og:title" content="The Rock" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:description"
+      content="Sean Connery found fame and fortune as the
+           suave, sophisticated British agent, James Bond."
+    />
+    <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
+    <meta property="og:image" content="/p1.jpg" />
+
     <title>Arun Ravikumar</title>
   </head>
   <body>
