--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
            suave, sophisticated British agent, James Bond."
     />
     <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
-    <meta property="og:image" content="/p1.jpg" />
+    <meta property="og:image:secure_url" itemprop="image" content="/p1.jpg" />
 
     <title>Arun Ravikumar</title>
   </head>
