--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
       content="0vH9XFF3IUFqXCr8TZxN7LWU4qBJJa9Vu_N0aFpy-AM"
     />
     <!-- og tags media  share -->
-    <meta property="og:title" content="The Rock" />
+    <meta name="description" content="Description Here" />
+    <meta property="og:title" content="Title Here" />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:description"
-      content="Sean Connery found fame and fortune as the
-           suave, sophisticated British agent, James Bond."
-    />
-    <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
-    <meta property="og:image:secure_url" itemprop="image" content="/p1.jpg" />
+    <meta property="og:image" content="/p1.jpg" />
+    <meta property="og:image:width" content="526" />
+    <meta property="og:image:height" content="275" />
+    <meta property="og:image:type" content="/p1.jpg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:creator" content="@secretsahil" />
+    <meta property="og:description" content="Description Here" />
+    <meta property="og:site_name" content="Site Name" />
 
     <title>Arun Ravikumar</title>
   </head>
