--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <meta name="description" content="Description Here" />
     <meta property="og:title" content="Title Here" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/p1.jpg" />
+    <meta property="og:image" content="https://www.arunarchitect.in/assets/photo-Kh7RFabF.png" />
     <meta property="og:image:width" content="526" />
     <meta property="og:image:height" content="275" />
-    <meta property="og:image:type" content="/p1.jpg" />
+    <meta property="og:image:type" content="https://www.arunarchitect.in/assets/photo-Kh7RFabF.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@secretsahil" />
     <meta property="og:description" content="Description Here" />
