--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
       content="0vH9XFF3IUFqXCr8TZxN7LWU4qBJJa9Vu_N0aFpy-AM"
     />
     <!-- og tags media  share -->
+    
     <meta name="description" content="Description Here" />
     <meta property="og:title" content="Title Here" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://www.arunarchitect.in/assets/photo-Kh7RFabF.png" />
+    <meta property="og:image" content="/p1.png" />
     <meta property="og:image:width" content="526" />
     <meta property="og:image:height" content="275" />
-    <meta property="og:image:type" content="https://www.arunarchitect.in/assets/photo-Kh7RFabF.png" />
+    <meta property="og:image:type" content="/p1.png" />
+    
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@secretsahil" />
     <meta property="og:description" content="Description Here" />
