--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <!-- og tags media  share -->
     
     <meta name="description" content="Description Here" />
-    <meta property="og:title" content="Title Here" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="/p1.png" />
-    <meta property="og:image:width" content="526" />
-    <meta property="og:image:height" content="275" />
-    <meta property="og:image:type" content="/p1.png" />
+    <meta name="og:title" content="Title Here" />
+    <meta name="og:type" content="website" />
+    <meta name="og:image" content="/p1.png" />
+    <meta name="og:image:width" content="526" />
+    <meta name="og:image:height" content="275" />
+    <meta name="og:image:type" content="/p1.png" />
     
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@secretsahil" />
-    <meta property="og:description" content="Description Here" />
-    <meta property="og:site_name" content="Site Name" />
+    <meta name="og:description" content="Description Here" />
+    <meta name="og:site_name" content="Site Name" />
 
     <title>Arun Ravikumar</title>
   </head>
