--- a/index.html
+++ b/index.html
@@ -10,18 +10,7 @@
     />
     <!-- og tags media  share -->
     
-    <meta name="description" content="Description Here" />
-    <meta name="og:title" content="Title Here" />
-    <meta name="og:type" content="website" />
-    <meta name="og:image" content="/p1.png" />
-    <meta name="og:image:width" content="526" />
-    <meta name="og:image:height" content="275" />
-    <meta name="og:image:type" content="/p1.png" />
-    
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:creator" content="@secretsahil" />
-    <meta name="og:description" content="Description Here" />
-    <meta name="og:site_name" content="Site Name" />
+    <meta property="og:image" content="https://www.youtube.com/img/desktop/yt_1200.png">
 
     <title>Arun Ravikumar</title>
   </head>
