--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <!-- og tags media  share -->
     
-    <meta property="og:image" content="/src/images/p1.jpg">
+    <meta property="og:image" content="/images/p1.jpg">
 
     <title>Arun Ravikumar</title>
   </head>
